--- a/index.html
+++ b/index.html
@@ -18,10 +18,18 @@
 </label>
 <ul>
 <li><a class="active" href="#">home</a></li>
-<li><a href="canvas.html">canvas</a></li>
-<li><a href="Kennedi.html">over kennedi</a></li>
-<li><a href="examenplan.html">examenplan</a></li>
-<li><a href="Software.html">software</a></li>
+<div class="dropdown">
+    <button class="dropbtn">Games</button>
+    <div class="dropdown-content">
+    <a href="#">Game 1</a>
+    <a href="#">Game 2</a>
+    <a href="#">Game 3</a>
+    </div>
+  </div>
+<li><a href="canvas.html">Favoriete games</a></li>
+<li><a href="Kennedi.html">Game 1</a></li>
+<li><a href="examenplan.html">Game 2</a></li>
+<li><a href="Software.html">Game</a></li>
 </ul>
 </nav>
 <div class="content">
@@ -32,7 +40,7 @@
 </div>
 </div>
 <footer>
-<p>©Kennedi</p>
+<p>Yassine Azdad, Kennedi, Bilal</p>
 </footer>
 </body>
 </html>
