--- a/port.html
+++ b/port.html
@@ -28,7 +28,7 @@
   
                 <li><a href="./fav.html">Bilal</a></li>
   
-                <li><a href="#">Kennedi</a></li>
+                <li><a href="favo.kennedi.html">Kennedi</a></li>
   
                 <li>
   
@@ -40,11 +40,11 @@
   
                     <ul>
   
-                      <li><a href="snake.js">Yassine</a></li>
+                      <li><a href="snake.html">Yassine</a></li>
   
-                      <li><a href="#">Bilal</a></li>
+                      <li><a href="game.html">Bilal</a></li>
   
-                      <li><a href="#">Kennedi</a></li>
+                      <li><a href="tiktokto.html">Kennedi</a></li>
   
                     </ul>
   
@@ -62,7 +62,7 @@
   
       <li><a href="portfolio.yassine.html">Portfolio Yassine</a></li>
       <li><a href="port.html">Portfolio Bilal</a></li>
-      <li><a href="#">Portfolio Kennedi</a></li>
+      <li><a href="portfolio.html">Portfolio Kennedi</a></li>
   
     </ul>
   
