--- a/Yassine.html
+++ b/Yassine.html
@@ -18,15 +18,15 @@
                 <ul>
                   <li><a href="Yassine.html">Yassine</a></li>
                   <li><a href="fav.html">Bilal</a></li>
-                  <li><a href="#">Kennedi</a></li>
+                  <li><a href="favo.kennedi.html">Kennedi</a></li>
                   <li>
                     <a href="#">Game <i class="fas fa-caret-right"></i></a>
                     
                     <div class="dropdown-menu-1">
                       <ul>
                         <li><a href="snake.html">Yassine</a></li>
-                        <li><a href="#">Bilal</a></li>
-                        <li><a href="#">Kennedi</a></li>
+                        <li><a href="game.html">Bilal</a></li>
+                        <li><a href="tiktokto.html">Kennedi</a></li>
                       </ul>
                     </div>
                   </li>
@@ -36,7 +36,7 @@
         </li>
         <li><a href="portfolio.yassine.html">Portfolio Yassine</a></li>
         <li><a href="port.html">Portfolio Bilal</a></li>
-        <li><a href="#">Portfolio Kennedi</a></li>
+        <li><a href="portfolio.html">Portfolio Kennedi</a></li>
       </ul>
     </div>
     </div>
