--- a/favo.kennedi.html
+++ b/favo.kennedi.html
@@ -83,14 +83,14 @@
 
   <img id="img4" src="./img/elden ring.jpg" alt="elden" height="250px" width="320px">
    <br><br><br><p>elden ring is mij favorieten game omdat er zoveel te doen is <br>
-     in deze game speel je als een man die alle monsters moest verslaan en zij meer dan honderd verschillende monsters <br>
-    elke monster heeft verschillende atack paterns die je uit je hoofd moet leren door meer deren keeren dood te gaan <br>
+     in deze game speel je als een man die alle monsters moest verslaan <br> en zij meer dan honderd verschillende monsters <br>
+    elke monster heeft verschillende atack paterns die je uit je hoofd moet leren <br> door meer deren keeren dood te gaan <br>
     als je tegen een van de bosses vecht dan kan je ook summons gebruiken die kunnen jje helpen vechten tegen de bos <br>
-    hoe veder je in de game komt hoe meer soorten wapens en armor krijgt elk zwaard of armor geeft je vershilende dingen <br>
+    hoe veder je in de game komt hoe meer soorten wapens en armor <br> krijgt elk zwaard of armor geeft je vershilende dingen <br>
     je hoeft niet alleen zwaarden te gebruiken je kan oo een van de meerderen magie stafen gebruien om de bosses te ver slaan
 
 </p>
-<p> archerhero is mijn favorieten mobile game in deze game moet je met een popetje door verschilende dungens gaan <br>
+<p id="p2"> archerhero is mijn favorieten mobile game in deze game moet je met een popetje door verschilende dungens gaan <br>
 elke keer dat je door een dungeon gaat krijg je geld en levels je kan met je geld kisten open maken <br>
 er zijn veel verschillende kisten je je hebt kisten waarvan je armor en wapens krijgt en een waar je matriaalen van krijgr <br>
 je hebt ook een die je een darken hoofd geeft die geeft je dan specialen krachten er zijn oo veel verschillende gam modus <br>
