--- a/snake.html
+++ b/snake.html
@@ -17,8 +17,8 @@
             <div class="dropdown-menu">
                 <ul>
                   <li><a href="Yassine.html">Yassine</a></li>
-                  <li><a href="#">Bilal</a></li>
-                  <li><a href="#">Kennedi</a></li>
+                  <li><a href="fav.html">Bilal</a></li>
+                  <li><a href="favo.kennedi.html">Kennedi</a></li>
                   <li>
                     <a href="#">Game <i class="fas fa-caret-right"></i></a>
                     
